# navicloud

./: .gitignore  README-tr.md  README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ozgen/navicloud/: MainActivity.kt  NaviCloudApp.kt
app/src/main/java/com/ozgen/navicloud/data/: AudioEffectsRepository.kt  DataStoreRecentSearches.kt  DownloadRepository.kt  MusicRepository.kt  RoomApiCacheStore.kt  ServerRepository.kt  SettingsRepository.kt
app/src/main/java/com/ozgen/navicloud/di/: AppModule.kt
app/src/main/java/com/ozgen/navicloud/playback/: MediaItemExt.kt  (+7 more)
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
desktop/: build.gradle.kts
desktop/installer/: navicloud.desktop  navicloud.iss  navicloud.nsi  navicloud.spec
desktop/smtc-helper/: Cargo.toml
desktop/smtc-helper/src/: main.rs
docs/remote-control/: RC-0-protocol-core.md  RC-1-transport-manual-connect.md  RC-2-discovery-manager.md  RC-3-device-picker-ui.md  RC-4-liveness-disconnect.md  RC-5-pairing-security.md  RC-6-e2e-verification.md  RC-7-fixed-secret.md  RC-8-desktop-single-instance.md  README.md
gradle/: libs.versions.toml
scripts/: build-release-linux.sh  build-release.bat  build-release.ps1  build-release.sh
shared/: build.gradle.kts
shared/src/main/kotlin/com/ozgen/navicloud/: AppInfo.kt
sharedUi/: build.gradle.kts
(+110 files in other folders)
