[package]
name = "navicloud-smtc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "navicloud-smtc"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies.windows]
version = "0.58"
features = [
    "Foundation",
    "Media",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_WinRT",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
